--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ body {
 /* footer of pages */
 
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
   
     background-color:black;
