--- a/styles.css
+++ b/styles.css
@@ -70,12 +70,28 @@ body {
     color: black !important;
 }
 
+/* =================================================================
+contact information
+*/
+.info-wrapper{
+    
+    overflow: auto;
+    width: 100%;
+    padding: 60px;
+    
+}
+
+/* Address style */
+.info-Wrapper-left {
+color:aqua;
+text-align: right;
+}
 /* Image Styles*/
 
 .image-items-wrapper {
     display: grid;
-    grid-template-rows: 1fr;
-    /*grid-template-columns: 1fr 1fr 1fr; */
+    /*grid-template-rows: 1fr;*/
+    grid-template-columns: 1fr 1fr; 
 }
 .image-item-wrapper {
     position: relative;
@@ -132,6 +148,7 @@ body {
 .two-column-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding: 100px
 }
 
 .about-img-background{
@@ -154,7 +171,7 @@ body {
 
 footer {
     position: relative;
-    bottom: 0;
+    bottom: -400px;
   
     background-color:black;
     width: 100%;
@@ -172,6 +189,7 @@ footer {
     background-color:black;
     width: 100vw;
     height: 40%;
+    padding-bottom: 10px;
 }
 
 .footer-wrapper h3{
