might have to go back to old commuit

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,9 @@ contact information
 color:aqua;
 text-align: right;
 }
+
+/* ================================================================= */
+
 /* Image Styles*/
 
 .image-items-wrapper {
